--- a/logiclab/static/editor.css
+++ b/logiclab/static/editor.css
@@ -1,4 +1,44 @@
-html {
-    background: black;
-    color: white;
+.expression-circuit-container {
+    background-color: #1E1E1E;
+    color: #D9D9D9;
+    font-size: 20px;
+    font-family: 'Inter';
+    font-weight: bold;
+    padding: 15px;
+}
+
+.expression-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+.expression-label {
+    align-self: flex-start;
+    margin-bottom: 8px;
+}
+
+.expression {
+    text-align: center;
+    font-family: 'Inter';
+    font-weight: bolder;
+    font-size: 20px;
+    width: 100%;
+    height: 2.5em;
+    border: none;
+    padding: 0;
+}
+
+.circuit-container {}
+
+.circuit-label {
+    margin-bottom: 8px;
+}
+
+.circuit-canvas {
+    background-color: #D9D9D9;
+    width: 100%;
+    height: 80vh;
 }
