--- a/logiclab/templates/editorPage.html
+++ b/logiclab/templates/editorPage.html
@@ -1,23 +1,32 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="static/editor.css">
-        <title> Página do Editor </title>
-    </head>
-    <body>
-        <section> Toll Bar</section>
-        <main>
-            <input type="text">
-            <div>
-                <canvas></canvas>
-                <div>
-                    <ul>
-                        <li> Lista dos componentes </li>
-                    </ul>
-                </div>
-            </div>
-        </main>
-    </body>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
+
+    <link rel="stylesheet" href="static/editor.css">
+</head>
+
+<body>
+    <div class="expression-circuit-container">
+        <div class="expression-container">
+            <div class="expression-label">Expressão algébrica</div>
+            <input class="expression" type="text">
+        </div>
+
+        <div class="circuit-container">
+            <div class="circuit-label">Circuito</div>
+            <div class="circuit-canvas"></div>
+        </div>
+    </div>
+</body>
+
 </html>
