--- a/logiclab/templates/editorPage.html
+++ b/logiclab/templates/editorPage.html
@@ -3,18 +3,87 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="static/editor.css">
+        <link rel="stylesheet" href="../static/editor.css">
+        <link rel="stylesheet" href="../static/toolbar.css">
+        
         <title> Página do Editor </title>
     </head>
     <body>
-        <section> Toll Bar</section>
+
+        <nav class = "toolbar">
+            <div class="logo">
+                <a href="#"><img src="../static/assets/Logo_toolbar.png" width="100" height="80" ></a>
+            </div>
+           
+            <div class= "navegation">
+                
+                    <div class = "dropDown">
+                            <a> <img src="../static/assets/botao.png"> </a>
+                            <ul class = "nav-list">
+                                <li><a href="#">Início</a></li>
+                                <li><a href="#">Sobre</a></li>
+                                <li><a href="#">Projetos</a></li>
+                                <li><a href="#">Contato</a></li>
+                            </ul>
+                    </div>
+                    
+                    <div class = "dropDown">
+                        <div> <a> <img src="../static/assets/botao.png"> </a> </div>
+                        <ul class = "nav-list">
+                            <li><a href="#">Start</a></li>
+                            <li><a href="#">About</a></li>
+                            <li><a href="#">Project</a></li>
+                            
+                        </ul>
+                     </div>
+
+                    <div class = "dropDown">
+                    <div> <a> <img src="../static/assets/botao.png"> </a> </div>
+                    <ul class = "nav-list">
+                        <li><a href="#">Start</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Project</a></li>
+                        
+                    </ul>
+                    </div>
+
+                    <div class = "dropDown">
+                        <div> <a> <img src="../static/assets/botao.png"> </a> </div>
+                            <ul class = "nav-list">
+                                <li><a href="#">Start</a></li>
+                                <li><a href="#">About</a></li>
+                                <li><a href="#">Project</a></li>
+                                
+                            </ul>
+                    </div>
+
+                    <div class = "dropDown">
+                    <div> <a> <img src="../static/assets/botao.png"> </a> </div>
+                    <ul class = "nav-list">
+                        <li><a href="#">Start</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Project</a></li>
+                        
+                    </ul>
+                    </div>
+
+
+
+                        
+                    
+                </div>
+        </nav>  
+        
+        
+
         <main>
-            <input type="text">
+            <!-- <input type="text"> -->
+            <script src="../static/toolbar.js"></script>
             <div>
                 <canvas></canvas>
                 <div>
                     <ul>
-                        <li> Lista dos componentes </li>
+                        <!-- <li> Lista dos componentes </li> -->
                     </ul>
                 </div>
             </div>
